syntax = "proto3";
package Protocol;

message Vector3
{
	float x = 1;
	float y = 2;
	float z = 3;
}

message AnimationParameter {
  oneof param {
    bool bool_param = 1;
    int32 int_param = 2;
    float float_param = 3;
  }
}

message C_INSTANTIATE_GAME_OBJECT
{
	int32 type = 1;
	string prefabName = 2;
	Vector3 position = 3;
	Vector3 rotation = 4;
}

message S_INSTANTIATE_GAME_OBJECT
{
	bool success = 1;
	int32 gameObjectId = 2;
}

message C_GET_GAME_OBJECT
{
}

message S_ADD_GAME_OBJECT
{
	message GameObjectInfo
	{
		int32 gameObjectId = 1;
		string ownerId = 2;
		int32 type = 3;
		string prefabName = 4;
		Vector3 position = 5;
		Vector3 rotation = 6;
	}
	repeated GameObjectInfo gameObjects = 1;
}

message C_DESTORY_GAME_OBJECT
{
	int32 gameObjectId = 1;
}

message S_DESTORY_GAME_OBJECT
{
	bool success = 1;
	int32 gameObjectId = 2;
}

message S_REMOVE_GAME_OBJECT
{
	repeated int32 gameObjects = 1;
}

message C_SET_GAME_OBJECT_PREFAB
{
	int32 gameObjectId = 1;
	string prefabName = 2;
}

message S_SET_GAME_OBJECT_PREFAB
{
	int32 gameObjectId = 1;
	string prefabName = 2;
}

message C_SET_GAME_OBJECT_OWNER
{
	int32 gameObjectId = 1;
}

message S_SET_GAME_OBJECT_OWNER
{
	int32 gameObjectId = 1;
	string ownerId = 2;
}

message C_SET_TRANSFORM
{
	int64 timestamp = 1;
	int32 gameObjectId = 2;
	Vector3 position = 3;
	Vector3 velocity = 4;
	Vector3 rotation = 5;
	Vector3 angularVelocity = 6;
}

message S_SET_TRANSFORM
{
	int64 timestamp = 1;
	int32 gameObjectId = 2;
	Vector3 position = 3;
	Vector3 velocity = 4;
	Vector3 rotation = 5;
	Vector3 angularVelocity = 6;
}

message C_SET_ANIMATION
{
	int32 gameObjectId = 1;
	map<int32, AnimationParameter> params = 2;
}

message S_SET_ANIMATION
{
	int32 gameObjectId = 1;
	map<int32, AnimationParameter> params = 2;
}